fix: Add alignment using flexbox

--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +19,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  /* justify-content: center; */
+  padding: 0px;
 }
 
 a {
@@ -22,4 +30,9 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin: 7px;
+}
+
+.header > * {
+  outline: 2px dotted red;
 }
